--- a/app/src/main/res/layout/item_01.xml
+++ b/app/src/main/res/layout/item_01.xml
@@ -16,23 +16,28 @@
             android:layout_gravity="center_horizontal" />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_name"
             android:textSize="24dp"
             android:text="name"
-            android:layout_toRightOf="@id/iv"
-            android:layout_toEndOf="@id/iv"
+            android:layout_alignParentTop="true"
+            android:layout_toRightOf="@+id/iv"
+            android:layout_toEndOf="@+id/iv"
+            android:layout_marginLeft="20dp"
+            android:layout_marginStart="20dp"
             />
 
         <TextView
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tv_tag"
             android:text="tags"
             android:layout_centerVertical="true"
             android:layout_toRightOf="@id/iv"
             android:layout_alignBottom="@id/iv"
+            android:layout_marginLeft="73dp"
+            android:layout_marginStart="73dp"
             />
     </RelativeLayout>
 
